force-app/main/default/objects/Related_Email_Tracker__c/Related_Email_Tracker__c.object-meta.xml
<CustomObject>
    <label>Related Email Tracker</label>
    <nameField>
        <displayFormat>RET-{000000}</displayFormat>
        <label>Related Email Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Email Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>