force-app/main/default/objects/Related_Email_Tracker__c/fields/Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Docket_Number__c</fullName>
    <label>Docket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>