force-app/main/default/objects/Related_Email_Tracker__c/fields/Email_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Email_Tracker__c</fullName>
    <label>Email Tracker</label>
    <referenceTo>SymphonyLF__Email_Tracker__c</referenceTo>
    <relationshipLabel>Related Email Tracker</relationshipLabel>
    <relationshipName>Related_Email_Tracker</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>