force-app/main/default/objects/Related_Email_Tracker__c/fields/Related_Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_Docket_Number__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; RelatedToId__c, Docket_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Docket Number</label>
    <type>Text</type>
</CustomField>