force-app/main/default/objects/Related_Email_Tracker__c/fields/RelatedToId__c.field-meta.xml
<CustomField>
    <fullName>RelatedToId__c</fullName>
    <label>RelatedToId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>