force-app/main/default/objects/Related_Email_Tracker__c/fields/sProcessed__c.field-meta.xml
<CustomField>
    <fullName>sProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sProcessed</label>
    <type>Checkbox</type>
</CustomField>